# DAGGER

./: README.md  paper.md
DAGGER/: D4connector.hpp  D8connector.hpp  RivNet1D.hpp  _D8connector.hpp  _cordonnier_versatile_2019.hpp  _graph.hpp  _old_D8connector.hpp  boost_spread_sort.hpp  boundary_conditions.hpp  cordonnier_versatile_2019.hpp  databag.hpp  depression_hierarchy.hpp  dodconnector.hpp  dodcontexts.hpp  enumutils.hpp  graph.hpp  graphuncs.hpp  hillshading.hpp  lookup_neighbourer.hpp  npy.hpp  parambag.hpp  priority_flood.hpp  rd_graph.hpp  rd_neighbourer.hpp  rd_select_watershed.hpp  river_tools_python.hpp  rivfuncs.hpp  simple_depression_solver.hpp  tinysubgraph.hpp  utils.hpp  vecutils.hpp  veque.hpp  wrap_helper.hpp  wrap_helper_MATLAB.hpp  wrap_helper_cpp.hpp  wrap_helper_julia.hpp  wrap_helper_python.hpp
DAGGER2/: bcs_connector_bindings.hpp  bind_LM.hpp  cordonnier_bindings.hpp  dg2_BCs.hpp  dg2_BCs_helper.hpp  dg2_LM.hpp  dg2_array.hpp  dg2_connector.hpp  dg2_cordonnier_flow_rerouter.hpp  dg2_cordonnier_method.hpp  dg2_fastconnector.hpp  dg2_flow_router.hpp  dg2_graph.hpp  dg2_grid.hpp  dg2_hydraulic_erosion.hpp  dg2_perlin_noise.hpp  dg2_priority_flood.hpp  dg2_sparse3d_algo.hpp  dg2_sparse3d_core.hpp  dg2_sparse3d_data.hpp  dg2_sparse3d_grid_interface.hpp  dg2_unionfind.hpp  dg2_visu_helper.hpp  graph_bindings.hpp  pnoise_bindings.hpp  setup.py  visu_bindings.hpp  visulem_bindings.hpp
cpp_templates/: full_stack_template.cpp  test_v2.cpp
wrappers/julia/: CMakeLists.txt  README.md  dagger.jl  install.sh  main.jl
wrappers/julia/demo/: dagger.jl
(+131 files in other folders)
